# churn-prediction-service

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  02_model_training.ipynb  03_advanced_modeling.ipynb
src/: app.py  data_preprocessing.py  predict.py
